--- a/web/app/components/main_sidebar/large_event_component.html.erb
+++ b/web/app/components/main_sidebar/large_event_component.html.erb
@@ -32,14 +32,14 @@
 					</div>
 					<div class="flex relative z-20 flex-wrap items-center py-2 px-3 -mt-6">
 						<a href="<%= @event.source_url %>" rel="nofollow" target="_blank" class="text-xs c-chip mr-3 mb-3 shadow group hover:shadow-md">
-							<div class="font-semibold">Site oficial</div>
+							<div class="font-semibold group-hover:text-brand-600">Site oficial</div>
 							<svg class="ml-2 h-5 text-gray-700 stroke-current group-hover:text-brand-600" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"/>
 							</svg>
 						</a>
 						<% if @event.ticket_url %>
 							<a href="<%= @event.ticket_url %>" rel="nofollow" target="_blank" class="text-xs c-chip mr-3 mb-3 shadow group hover:shadow-md">
-								<div class="font-semibold">Ingressos</div>
+								<div class="font-semibold group-hover:text-brand-600">Ingressos</div>
 								<svg class="ml-2 h-5 text-gray-700 stroke-current group-hover:text-brand-600" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 5v2m0 4v2m0 4v2M5 5a2 2 0 00-2 2v3a2 2 0 110 4v3a2 2 0 002 2h14a2 2 0 002-2v-3a2 2 0 110-4V7a2 2 0 00-2-2H5z"/>
 								</svg>
@@ -52,7 +52,7 @@
 								 data-share-button-url="<%= event_url(@event, format: :html) %>"
 								 data-action="click->share-button#share">
 							<input class="absolute opacity-0" style="bottom: -30px" data-share-button-target="input" type="text" value="<%= event_url(@event, format: :html) %>">
-							<div class="font-semibold">Compartilhar</div>
+							<div class="font-semibold group-hover:text-brand-600">Compartilhar</div>
 							<svg class="ml-2 h-5 text-gray-700 stroke-current group-hover:text-brand-600" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z"/>
 							</svg>
@@ -105,14 +105,11 @@
 						</div>
 						<div class="my-auto text-xs text-gray-800">
 							<% if @event.multiple_hours? %>
-								<%= I18n.l(@event.start_time, format: :default).capitalize %>,
-								em múltiplos horários,
-								em <%= helpers.distance_of_time_in_words @event&.start_time, DateTime.now, false, only: ['days'] %>.
+								<%= "#{I18n.l(@event.start_time, format: :default).capitalize}, em múltiplos horários#{'.' unless @event&.start_time > DateTime.now + 2}" %>
+								<%= ", daqui #{helpers.distance_of_time_in_words @event&.start_time, DateTime.now, false, only: ['days']}." if @event&.start_time > DateTime.now + 2 %>
 								<%= link_to 'Confirmar horários', @event.source_url, class: 'text-brand-600', rel: 'nofollow', target: '_blank' rescue nil %>
 							<% else %>
-								<%= I18n.l(@event.start_time, format: :default).capitalize %>,
-								às <%= helpers.format_hour(@event.start_time) %> horas,
-								daqui <%= helpers.distance_of_time_in_words @event&.start_time, DateTime.now, false, only: ['days', 'hours'] %>
+								<%= "#{I18n.l(@event.start_time, format: :default).capitalize}#{'.' unless @event&.start_time > DateTime.now + 2}" %> <%= ", daqui #{helpers.distance_of_time_in_words @event&.start_time, DateTime.now, false, only: ['days', 'hours']}." if @event&.start_time > DateTime.now + 2 %>
 							<% end %>
 						</div>
 					</div>
