--- a/web/app/components/movies_component.html.erb
+++ b/web/app/components/movies_component.html.erb
@@ -15,9 +15,16 @@
 						<% @user.following_cinemas.each do |cinema| %>
 							<%= link_to cinema_path(cinema), 'data-turbo-preserve-scroll': true do %>
 								<div class="mr-3 mb-3 c-chip" title="<%= cinema.display_name %>">
-									<%= helpers.limit_name_size cinema.display_name, 24 %>
+									<%= helpers.truncate cinema.display_name, length: 16 %>
 								</div>
 							<% end %>
+						<% end %>
+						<%= link_to cinemas_path do %>
+							<div class="mr-3 mb-3 text-sm md:text-base c-chip" title="Ver todos os cinemas">
+								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 stroke-current" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"/>
+								</svg>
+							</div>
 						<% end %>
 					<% else %>
 						<%= link_to cinemas_path do %>
