Adjust in train_event_component for mobile

--- a/web/app/components/hero/swipable_component.html.erb
+++ b/web/app/components/hero/swipable_component.html.erb
@@ -8,7 +8,7 @@
 							<div class="c-h2">
 								O que você curte?
 							</div>
-							<div class="c-span">
+							<div class="text-sm md:text-base">
 								Para receber sugestões personalizadas, indique ao menos
 								<span class="text-brand-600 font-medium"><%= @min_events_to_train - events_trained %> eventos</span>
 								que você curte.
