--- a/web/app/views/movies/hovercard.html.erb
+++ b/web/app/views/movies/hovercard.html.erb
@@ -1,4 +1,4 @@
-<div data-hovercard-target="inner" class="transition-all transform fixed bottom-0 left-0 z-50 p-6 mx-0 space-y-3 bg-white rounded-lg border md:-mx-2 md:absolute md:bottom-3 min-w-max-content shadow-t-2xl md:shadow-xl">
+<div data-hovercard-target="inner" class="transition-all transform fixed bottom-0 left-0 z-50 p-4 md:p-6 mx-0 space-y-3 bg-white rounded-t-xl md:rounded-lg border md:-mx-2 md:absolute md:bottom-3 min-w-max-content shadow-t-2xl md:shadow-xl">
 	<div class="flex items-start items-center space-x-2 justify-between md:flex-row md:items-center md:mb-0">
 		<h3 class="text-lg c-h3 text-brand-600"><%= @movie.title %></h3>
 		<% if @movie.trailer %>
