--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -5,9 +5,9 @@
 									'main-sidebar--horizontal-event-open-in-sidebar-value': @open_in_sidebar,
 									'main-sidebar--horizontal-event-open-value':            false },
 								class: 'transition-opacity group' do %>
-	<div class="flex bg-white select-none tap-highlight-none">
+	<div class="flex bg-white select-none">
 		<div>
-			<div class="rounded md:rounded-lg relative w-24 h-16 bg-gray-100 md:h-28 md:w-48">
+			<div class="relative w-24 h-16 bg-gray-100 rounded md:rounded-lg md:h-28 md:w-48">
 				<%= link_to event_path(@event),
 										data: {
 											'turbo-preserve-scroll': true,
@@ -25,13 +25,13 @@
 					} rescue nil %>
 				<% end %>
 				<% if helpers.is_new_event? @event %>
-					<div title="Criado nas últimas 48 horas" class="absolute left-1 -top-2 py-1 px-2 font-semibold bg-white rounded-full border border-gray-100 md:shadow md:left-3 text-brand-600 text-xxs">NOVO</div>
+					<div title="Criado nas últimas 48 horas" class="absolute left-1 -top-2 py-1 px-2 font-semibold bg-brand-600 rounded-full border border-brand-100 md:shadow md:left-3 text-white text-xxs">NOVO</div>
 				<% end %>
 			</div>
 		</div>
-		<div class="-mt-1.5 pl-6">
-			<div class="inline items-center text-sm md:flex md:space-x-2">
-				<span class="hidden -space-x-2 md:flex">
+		<div class="hidden pl-6 md:inline-block">
+			<div class="hidden items-center text-sm md:flex md:space-x-2">
+				<div class="hidden md:flex">
 					<% @event.organizers[0...1].each do |organizer| %>
 						<div data-controller="hovercard"
 								 data-hovercard-active-value="true"
@@ -50,29 +50,28 @@
 									onerror: "this.style.opacity='0'"
 								} rescue nil %>
 								<% unless organizer.image %>
-									<img src="<%= "https://ui-avatars.com/api/?size=24&background=random&name=#{organizer.details_name}" %>" alt="<%= "Organizador #{organizer.details_name}" %>" class="border border-brand-100 bg-brand-100 h-6 object-center object-cover rounded-full w-6">
+									<img src="<%= "https://ui-avatars.com/api/?size=24&background=random&name=#{organizer.details_name}" %>" alt="<%= "Organizador #{organizer.details_name}" %>" class="object-cover object-center w-6 h-6 rounded-full border border-brand-100 bg-brand-100">
 								<% end %>
 							<% end %>
 						</div>
 					<% end %>
-					</span>
-				<span class="hidden text-gray-700 md:inline">·</span>
-				<span class="inline text-gray-700 md:inline-block">
-					<% if @event.multiple_hours? %>
-						<span title="Acontece em vários horários, verifique no site oficial">
-							+1 horário
-						</span>
-					<% else %>
-							<%= helpers.format_hour @event.start_time %>h
-					<% end %>
-				</span>
-				<span class="text-gray-700 md:hidden">·</span>
-				<div class="hidden md:inline">
-					<span class="text-gray-700">·</span>
-					<span class="text-gray-700">
-  					<%= link_to helpers.limit_place_name_size(@event.place_details_name, 30), place_path(@event.place), data: { 'turbo-preserve-scroll': true }, class: 'md:hover:text-brand-600' %>
-  				</span>
 				</div>
+				<span class="inline text-gray-700 md:inline-block">
+							<% if @event.multiple_hours? %>
+								<span title="Acontece em vários horários, verifique no site oficial">
+									+1 horário
+								</span>
+							<% else %>
+									<%= helpers.format_hour @event.start_time %>h
+							<% end %>
+						</span>
+				<span class="text-gray-700 md:hidden">·</span>
+				<span class="hidden md:inline">
+							<span class="text-gray-700">·</span>
+							<span class="text-gray-700">
+								<%= link_to helpers.limit_place_name_size(@event.place_details_name, 30), place_path(@event.place), data: { 'turbo-preserve-scroll': true }, class: 'md:hover:text-brand-600' %>
+							</span>
+						</span>
 			</div>
 			<%= content_tag :a,
 											href:  event_path(@event),
@@ -84,35 +83,50 @@
 											class: 'c-h3 inline md:hover:text-brand-600 mb-1' do %>
 				<%= helpers.limit_name_size @event.name, 50 %>
 			<% end %>
-			<div class="inline text-sm">
-				<span class="inline">
-						·
+			<span class="text-gray-700 md:font-medium md:text-brand-600">
+				· <%= link_to @event&.categories_display_name&.capitalize, category_events_path(@event.categories_url), data: { 'turbo-preserve-scroll': true }, class: 'md:hover:text-brand-600' %>
+			</span>
+			<span>·</span>
+			<% if @event.prices&.present? %>
+				<span class="text-sm" title="Preço médio informado na descrição do evento">
+					<%= number_to_currency helpers.prices_average(@event.prices), locale: 'pt-BR' %>
+					·
 				</span>
-				<span class="text-gray-700 md:font-medium md:text-brand-600">
-					<%= link_to @event&.categories_display_name&.capitalize, category_events_path(@event.categories_url), data: { 'turbo-preserve-scroll': true }, class: 'md:hover:text-brand-600' %>
-				</span>
-				<span>
-						·
-				</span>
-				<% if @event.prices&.present? %>
-					<span class="md:hidden" title="Preço médio informado na descrição do evento"><%= number_to_currency helpers.prices_average(@event.prices), locale: 'pt-BR' %>
-						· </span>
-				<% end %>
-				<span class="text-gray-700 md:hidden">
-					<%= link_to helpers.limit_place_name_size(@event.place_details_name, 26), place_path(@event.place), data: { 'turbo-preserve-scroll': true }, class: 'md:hover:text-brand-600' %>
-				</span>
-				<% if @event.prices&.present? %>
-					<span class="hidden md:inline-block" title="Preço médio informado na descrição do evento"><%= number_to_currency helpers.prices_average(@event.prices), locale: 'pt-BR' %>
-						· </span>
-				<% end %>
-				<span class="hidden font-light text-gray-700 md:inline">
-					<%= helpers.limit_description_size @event.description, 80 %>
-				</span>
-			</div>
-			<!--			<div class="text-gray-500">-->
-			<!--				<%#= helpers.format_hour @event.start_time %>h ·-->
-			<%#= link_to @event&.categories_display_name&.titleize, category_events_path(@event.categories_url), data: { 'turbo-preserve-scroll': true }, class: 'md:hover:text-brand-600' %>
-			<!--			</div>-->
+			<% end %>
+			<span class="hidden text-sm font-light text-gray-700 md:inline">
+				<%= helpers.limit_description_size(@event.description, 80)&.capitalize %>
+			</span>
+		</div>
+		<div class="-mt-1 pl-6 md:hidden">
+			<%= content_tag :a,
+											href:  event_path(@event),
+											data:  {
+												'turbo-preserve-scroll': true,
+												action:                  'click->main-sidebar--horizontal-event#openEvent',
+												'event-id':              @event.id
+											},
+											class: 'inline-block' do %>
+				<%= tag.div helpers.limit_name_size(@event.name, 50), class: 'c-h3 inline' %>
+
+				<span>·</span>
+				<div class="inline text-sm text-gray-700">
+					<% if @event.multiple_hours? %>
+					<span title="Acontece em vários horários, verifique no site oficial">
+						+1 horário
+					</span>
+					<% else %>
+						<%= helpers.format_hour @event.start_time %>h
+					<% end %>
+				</div>
+				<span>·</span>
+				<div class="inline text-sm text-gray-700 md:font-medium md:text-brand-600">
+					<%= @event&.categories_display_name&.capitalize %>
+				</div>
+				<span>·</span>
+				<div class="inline text-sm text-gray-700">
+					<%= helpers.limit_place_name_size(@event.place_details_name, 26) %>
+				</div>
+			<% end %>
 			<div class="<%= helpers.class_names('flex transition-opacity duration-150',
 																					{ 'mt-1 -ml-3 md:group-hover:opacity-100  md:opacity-0': !@user&.like_or_dislike?(@event),
 																						'mt-2':                                                @user&.like_or_dislike?(@event) }) %>">
@@ -155,6 +169,9 @@
 					<%= link_to 'Editar', edit_admin_event_path(@event), class: 'md:flex md:group-hover:opacity-100 md:opacity-0 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 text-gray-500 hover:text-brand-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform hover:bg-brand-100 px-2 py-1 jus' %>
 				<% end %>
 			</div>
+
 		</div>
+
+
 	</div>
 <% end %>
