--- a/web/app/components/movies_component.html.erb
+++ b/web/app/components/movies_component.html.erb
@@ -21,7 +21,7 @@
 						<% end %>
 						<%= link_to cinemas_path do %>
 							<div class="mr-3 mb-3 text-sm md:text-base c-chip" title="Ver todos os cinemas">
-								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 stroke-current" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+								<svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 stroke-current" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"/>
 								</svg>
 							</div>
@@ -48,14 +48,14 @@
 				 class="relative px-1">
 			<div class="relative" data-hovercard-target="card" data-action="mouseenter->hovercard#clearTimerHide mouseleave->hovercard#hide"></div>
 			<div class="hidden absolute top-0 left-0 z-20 items-center w-2 h-full select-none md:flex bg-x-white-to-transparent">
-				<div data-slider-target="left" data-action="click->slider#left mouseenter->hovercard#hide" class="hidden my-auto mt-20 -ml-4 rounded-full shadow-md transition-colors duration-200 cursor-pointer bg-brand-200 hover:bg-brand-600 hover:text-white text-brand-700">
+				<div data-slider-target="left" data-action="click->slider#left mouseenter->hovercard#hide" class="<%= helpers.class_names('hidden my-auto -ml-4 rounded-full shadow-md transition-colors duration-200 cursor-pointer bg-brand-200 hover:bg-brand-600 hover:text-white text-brand-700', { 'mt-20': @template == 'default', 'mt-8': @template == 'small' }) %> ">
 					<svg xmlns="http://www.w3.org/2000/svg" class="p-2 w-10 h-10 fill-current" viewBox="0 0 20 20" fill="currentColor">
 						<path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd"/>
 					</svg>
 				</div>
 			</div>
 			<div class="hidden absolute top-0 right-0 z-20 items-center w-3 h-full select-none md:flex bg-x-transparent-to-white">
-				<div data-slider-target="right" data-action="click->slider#right mouseenter->hovercard#hide" class="my-auto mt-20 -ml-3 rounded-full shadow-md transition-colors duration-200 cursor-pointer bg-brand-200 hover:bg-brand-600 hover:text-white text-brand-700">
+				<div data-slider-target="right" data-action="click->slider#right mouseenter->hovercard#hide" class="<%= helpers.class_names('my-auto -ml-3 rounded-full shadow-md transition-colors duration-200 cursor-pointer bg-brand-200 hover:bg-brand-600 hover:text-white text-brand-700', { 'mt-20': @template == 'default', 'mt-8': @template == 'small' }) %> ">
 					<svg xmlns="http://www.w3.org/2000/svg" class="p-2 w-10 h-10 fill-current" viewBox="0 0 20 20" fill="currentColor">
 						<path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"/>
 					</svg>
@@ -64,15 +64,15 @@
 			<div data-slider-target="scroller"
 					 data-persist-horizontal-scroll-target="scroller"
 					 class="py-2 rounded-lg md:border md:px-3 md:py-3 scrollx">
-				<div class="grid grid-flow-col gap-2.5 px-5 md:px-0 w-content grid-after-margin">
+				<div class="<%= helpers.class_names('grid grid-flow-col px-5 md:px-0 w-content grid-after-margin', { 'gap-2.5': @template == 'default', 'gap-1.5': @template == 'small' }) %> ">
 					<% @movies.reverse.each do |movie| %>
 						<div data-url="<%= hovercard_movie_path(movie) %>"
 								 data-action="mouseenter->hovercard#show mouseleave->hovercard#clearTimerShow"
-								 class="flex flex-col w-24 transition-transform transform group md:hover:scale-105">
+								 class="<%= helpers.class_names('flex flex-col transition-transform transform group md:hover:scale-105', { 'w-24': @template == 'default', 'w-16': @template == 'small' }) %>">
 							<% if movie.rating %>
-								<div class="absolute bg-white flex font-semibold items-center left-0 ml-1 mt-1 p-1 rounded space-x-0.5 text-gray-700 group-hover:text-brand-600 text-xs top-0" title="votação de usuário do IMDB">
-									<span><%= movie.rating %></span>
-									<svg xmlns="http://www.w3.org/2000/svg" class="h-3.5 fill-current" viewBox="0 0 20 20" fill="currentColor">
+								<div class="<%= helpers.class_names('absolute bg-white flex font-semibold items-center left-0 ml-1 mt-1 rounded space-x-0.5 text-gray-700 group-hover:text-brand-600 text-xs top-0', { 'p-0.5': @template == 'small', 'p-1': @template == 'default' }) %> " title="votação de usuário do IMDB">
+									<span class="<%= helpers.class_names({ 'text-xxs': @template == 'small' }) %>"><%= movie.rating %></span>
+									<svg xmlns="http://www.w3.org/2000/svg" class="<%= helpers.class_names('fill-current', { 'h-3.5': @template == 'default', 'h-3': @template == 'small' }) %>" viewBox="0 0 20 20" fill="currentColor">
 										<path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/>
 									</svg>
 								</div>
@@ -82,14 +82,13 @@
 									loading: :lazy,
 									title:   movie.title,
 									alt:     "Filme #{movie.title}",
-									class:   'border shadow-sm group-hover:shadow bg-gray-100 object-center object-cover rounded-md',
-									style:   'min-height: 145px',
+									class:   helpers.class_names('border shadow-sm group-hover:shadow bg-gray-100 object-center object-cover rounded-md', { 'h-36': @template == 'default', 'h-24': @template == 'small' }),
 									onerror: "this.style.opacity='0'"
 								} rescue nil %>
-								<%= tag.div helpers.limit_name_size(movie.title, 30), class: 'group-hover:text-brand-600 text-xs font-medium inline-block leading-tight mt-2 text-gray-900' %>
-								<div class="group-hover:text-brand-600 mt-1 leading-tight text-gray-700 text-xxs">
+								<%= tag.div helpers.limit_name_size(movie.title, 30), class: 'group-hover:text-brand-600 text-xs font-medium inline-block leading-tight mt-2 text-gray-900' if @template == 'default' %>
+								<%= tag.div class: 'group-hover:text-brand-600 mt-1 leading-tight text-gray-700 text-xxs' do %>
 									<%= movie.genres&.join(", ") %>
-								</div>
+								<% end if @template == 'default' %>
 							<% end %>
 						</div>
 					<% end %>
