Adjust style of movies_component

--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -31,7 +31,7 @@
 		</div>
 		<div class="hidden pl-6 md:inline-block">
 			<div class="hidden items-center text-sm md:flex md:space-x-2">
-				<div class="hidden md:flex">
+				<div class="hidden md:flex h-6">
 					<% @event.organizers[0...1].each do |organizer| %>
 						<div data-controller="hovercard"
 								 data-hovercard-active-value="true"
