--- a/web/app/views/users/admin/index.html.erb
+++ b/web/app/views/users/admin/index.html.erb
@@ -34,7 +34,7 @@
 										</div>
 										<div class="ml-4">
 											<div class="font-bold text-gray-700">
-												(<%= user.id %>) <%= link_to user.name, user_path(user) %>
+												(<%= user.id %>) <%= link_to user.name, profile_path(user) %>
 											</div>
 											<div class="text-sm text-gray-500">
 												<%= user.email %>
