--- a/web/app/components/hero/swipable_component.html.erb
+++ b/web/app/components/hero/swipable_component.html.erb
@@ -1,7 +1,7 @@
 <%= content_tag :div, id: 'swipable', data: { controller: 'hero--swipable' }, class: 'flex select-none tap-highlight-none' do %>
 	<% if @show_swipable %>
 		<div class="flex w-full">
-			<div class="md:mx-auto mx-5 md:px-5 w-full">
+			<div class="md:mx-auto mx-5 w-full">
 				<% if current_stage == :train %>
 					<div data-swipable-target="items">
 						<div class="mb-5">
