--- a/web/app/components/left_sidebar/calendar_component.html.erb
+++ b/web/app/components/left_sidebar/calendar_component.html.erb
@@ -1,6 +1,6 @@
-<%= content_tag :div, id: 'calendar', data: { controller: 'left-sidebar--calendar' }, class: 'transition-opacity', style: 'will-change: min-height;' do %>
+<%= content_tag :div, id: 'calendar', data: { controller: 'left-sidebar--calendar', title: @title }, class: 'transition-opacity', style: 'will-change: min-height;' do %>
 	<div id="calendar--inner" data-calendar-target="calendar" class="calendar select-none tap-highlight-none mt-12" style="will-change: position, transform;">
-		<span class="c-h2 pb-2 pt-10">Minha agenda</span>
+		<%= tag.h2 @title, class: 'c-h2 pb-2' if @title %>
 		<div class="">
 			<div class="capitalize flex font-medium items-center justify-between mt-5 pb-3 rounded-t-lg text-gray-500">
 				<div class="flex items-center justify-items-start">
@@ -14,13 +14,13 @@
 					</svg>
 				</div>
 				<div class="mr-2 flex">
-					<%= content_tag :button, id: 'calendar-previous', data: { reflex: 'click->LeftSidebar::Calendar#prev_month', start_date: start_date }, class: 'cursor-pointer flex focus:outline-none h-8 items-center justify-center md:hover:bg-brand-600 md:hover:text-white mx-1 rounded-full w-8' do %>
+					<%= content_tag :button, id: 'calendar-previous', data: { reflex: 'click->LeftSidebar::Calendar#prev_month', start_date: start_date, 'reflex-dataset': 'combined' }, class: 'cursor-pointer flex focus:outline-none h-8 items-center justify-center md:hover:bg-brand-600 md:hover:text-white mx-1 rounded-full w-8' do %>
 						<svg class="h-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 							<path d="M0 0h24v24H0z" fill="none"/>
 							<path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
 						</svg>
 					<% end if start_date&.month > DateTime.now.month %>
-					<%= content_tag :button, id: 'calendar-next', data: { reflex: 'click->LeftSidebar::Calendar#next_month', start_date: start_date }, class: 'cursor-pointer flex focus:outline-none h-8 items-center justify-center md:hover:bg-brand-600 md:hover:text-white mx-1 rounded-full w-8' do %>
+					<%= content_tag :button, id: 'calendar-next', data: { reflex: 'click->LeftSidebar::Calendar#next_month', start_date: start_date, 'reflex-dataset': 'combined' }, class: 'cursor-pointer flex focus:outline-none h-8 items-center justify-center md:hover:bg-brand-600 md:hover:text-white mx-1 rounded-full w-8' do %>
 						<svg class="h-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 							<path d="M0 0h24v24H0z" fill="none"/>
 							<path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
@@ -41,7 +41,7 @@
 				<% date_range.each_slice(7) do |week| %>
 					<tr>
 						<% week.each do |day| %>
-							<%= content_tag :td, id: "calendar-#{day.strftime}", data: { action: 'click->left-sidebar--calendar#inDay', day: day.strftime }, class: td_classes_for(day) do %>
+							<%= content_tag :td, id: "calendar-#{day.strftime}", data: { action: 'click->left-sidebar--calendar#inDay', day: day.strftime, 'reflex-dataset': 'combined' }, class: td_classes_for(day) do %>
 								<%= content_tag :div, class: helpers.class_names('relative z-10 mx-auto text-xs day-of-month',
 																																 { 'mt-1':                                               @indicators&.include?(day),
 																																	 'selected flex items-center justify-center flex-col': Date.current == day && !@filter || (day.to_date == start_date.to_date && @filter) }) do %>
@@ -64,11 +64,12 @@
 				</tbody>
 			</table>
 		</div>
-		<div id="calendar__list" class="pr-8 mt-5" data-left-sidebar--calendar-target="list" style="<%= helpers.class_names 'hidden': @events&.empty? %>">
+		<div id="calendar__list" class="pr-5 mt-5" data-left-sidebar--calendar-target="list" style="<%= helpers.class_names 'hidden': @events&.empty? %>">
 			<div class="flex justify-between items-baseline bg-white top-0 z-20">
 				<%= content_tag :div,
 												data:  {
-													reflex: 'click->LeftSidebar::Calendar#clear_filter'
+													reflex:           'click->LeftSidebar::Calendar#clear_filter',
+													'reflex-dataset': 'combined'
 												},
 												id:    'calendar__clear-filter',
 												class: helpers.class_names('relative group bg-brand-200 cursor-pointer flex font-semibold h-content hover:bg-red-200 hover:text-red-700 items-center mt-3 mx-auto px-2 py-1 rounded-full select-none text-brand-700 text-sm w-content',
@@ -90,7 +91,7 @@
 			<% if @user && @events&.empty? && (@start_date != Date.today) %>
 				<div id="calendar__filter" class="p-2 my-6 mt-3 text-sm text-center text-gray-600 rounded-lg bg-gray-50">
 					Sem eventos na sua agenda neste dia.
-					<%= content_tag :div, data: { reflex: 'click->LeftSidebar::Calendar#clear_filter' }, class: 'text-center cursor-pointer underline text-gray-500 text-sm' do %>
+					<%= content_tag :div, data: { reflex: 'click->LeftSidebar::Calendar#clear_filter', 'reflex-dataset': 'combined' }, class: 'text-center cursor-pointer underline text-gray-500 text-sm' do %>
 						Remover filtro
 					<% end %>
 				</div>
