--- a/web/app/components/movies_component.html.erb
+++ b/web/app/components/movies_component.html.erb
@@ -1,10 +1,10 @@
-<div id="<%= @id %>" data-turbo-permanent class="mx-auto max-w-screen-lg" data-controller="persist-horizontal-scroll slider" data-model="movie" data-slider-distance-value="400" data-persist-horizontal-scroll-value="0">
+<div id="<%= @id %>" data-turbo-permanent class="select-none mx-auto max-w-screen-lg" data-controller="persist-horizontal-scroll slider" data-model="movie" data-slider-distance-value="400" data-persist-horizontal-scroll-value="0">
 	<% if @title %>
-		<h2 class="px-5 c-h2">
+		<h2 class="c-h2">
 			<%= @title %>
 		</h2>
 	<% end %>
-	<div class="relative mt-3 md:px-5">
+	<div class="relative mt-3">
 		<% if @chips %>
 			<div class="scrollx">
 				<div class="flex px-5 w-content md:flex-wrap md:px-0 md:mb-2">
