--- a/web/app/views/components/_bottom-navigation.html.erb
+++ b/web/app/views/components/_bottom-navigation.html.erb
@@ -1,5 +1,6 @@
-<% if ('feeds' == controller_name && action_name != 'show') ||
-	('users' == controller_name) %>
+<% if (controller_name == 'feeds' && action_name != 'show') ||
+	controller_name == 'users' ||
+	controller_name == 'search' %>
 	<div class="select-none tap-highlight-none fixed bottom-0 z-40 w-full py-2 overflow-hidden transition-transform duration-100 transform bg-white md:hidden md:shadow-none elevation-8 md:sticky md:top-0 ripple ripple-black"
 			 data-controller="ripple bottom-navigation go-to"
 			 data-go-to-delay="100"
