--- a/web/app/views/components/events/_saves.html.erb
+++ b/web/app/views/components/events/_saves.html.erb
@@ -7,7 +7,7 @@
 %>
 
 <div data-controller="slider" class="<%= html.dig(:container, :css) %>">
-	<%= link_to user_path(user), class: 'flex justify-between' do %>
+	<%= link_to profile_path(user), class: 'flex justify-between' do %>
 		<h2 class="<%= html.dig(:title, :css) || 'flex-1 font-bold group-hover:text-brand-500 leading-6 md:leading-normal md:pl-0 md:text-5xl pl-5 text-gray-800 text-xl' %>">
 			Salvos
 		</h2>
