--- a/web/app/views/feeds/category.html.erb
+++ b/web/app/views/feeds/category.html.erb
@@ -21,7 +21,7 @@
 						 id="left-sidebar"
 						 data-controller="simple-scrollbar"
 						 style="height: calc(100vh - 64px); top: 64px">
-			<%= render LeftSidebar::CalendarComponent.new(resources: @liked_events, start_date: Date.today, user: current_user, filter: false, indicators: @indicators) %>
+			<%= render LeftSidebar::CalendarComponent.new(resources: @liked_events, start_date: Date.today, user: current_user, title: 'Minha agenda', filter: false) %>
 		</section>
 	<% end %>
 	<section id="main-sidebar" class="col-span-12 md:col-span-5">
