--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -1,9 +1,9 @@
 <%= render ModalComponent.new %>
 
 <div id="main-content" class="gap-24 mx-auto max-w-screen-lg md:grid md:grid-cols-8">
-	<section id="main-sidebar" class="col-span-8 pt-6 space-y-10 min-h-screen md:pt-12 md:space-y-16 md:col-span-5">
+	<section id="main-sidebar" class="col-span-8 pt-6 min-h-screen md:pt-12 space-y-16 md:col-span-5">
 		<% if notice %>
-			<div class="flex items-center p-3 mx-4 space-x-2 max-w-screen-lg text-sm font-semibold rounded-lg border bg-brand-100 border-brand-200 text-brand-600">
+			<div class="flex items-center p-3 space-x-2 max-w-screen-lg text-sm font-semibold rounded-lg border bg-brand-100 border-brand-200 text-brand-600">
 				<div class="flex flex-shrink-0 justify-center items-center w-12 h-12 rounded-full bg-brand-100 sm:h-10 sm:w-10">
 					<!-- Heroicon name: exclamation -->
 					<svg class="w-6 h-6 text-brand-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -18,7 +18,7 @@
 		<% unless params[:day] || params[:category] %>
 			<% unless current_user %>
 				<div id="hero__presentation" data-turbo-permanent="" class="overflow-hidden overflow-x-hidden relative gap-3 items-center mx-5 mb-5 mb-16 h-56 rounded-lg border select-none md:mb-24 md:h-72 md:items-start tap-highlight-none" style="min-height: 200px">
-					<div class="relative z-20 px-3 pt-3 -mb-5 md:pt-5 md:px-5">
+					<div class="relative z-20 px-3 pt-3 -mb-5 md:pt-5">
 						<h2 class="hidden md:inline-block c-h2 text-brand-600">
 							Eventos e cinema em Porto Alegre
 						</h2>
@@ -43,12 +43,12 @@
 																	 hovercard: true,
 																	 id:        'movies-index') if @movies.present? && controller_name == 'feeds' && action_name == 'index' && params[:category].blank? %>
 
-		<div id="main-sidebar--feed">
+		<div id="main-sidebar--feed" class="px-5 md:px-0">
 			<% if @upcoming_events.present? %>
 				<div class="bg-white">
 					<% if params[:category] %>
 						<div class="flex justify-between items-center pr-5 md:pr-10">
-							<h2 class="px-5 mb-3 c-h2">
+							<h2 class="mb-3 c-h2">
 								Eventos nos próximos dias na categoria:
 								<span class="text-brand-600">
 									<%= @category&.details_display_name %>
@@ -56,11 +56,11 @@
 							</h2>
 						</div>
 					<% elsif params[:day] %>
-						<h2 class="px-5 c-h2">
+						<h2 class="c-h2">
 							Eventos no dia <%= I18n.l params[:day].to_date %>
 						</h2>
 					<% else %>
-						<h2 class="px-5 c-h2">
+						<h2 class="c-h2">
 							Eventos nos próximos dias
 						</h2>
 						<%= render MainSidebar::FilterComponent.new(session:           session.id,
@@ -105,8 +105,8 @@
 			<%= render LeftSidebar::CalendarComponent.new(resources:  @liked_resources,
 																										start_date: Date.today,
 																										user:       current_user,
-																										filter:     false,
-																										indicators: @indicators) %>
+																										title:      'Minha agenda',
+																										filter:     false) %>
 		</section>
 	<% end %>
 
