--- a/web/app/views/users/_form.html.erb
+++ b/web/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <%= notice %>
 
-<%= form_with(model: user, local: true, html: {enctype: "multipart/form-data", data: { turbo: false }}, class: 'text-gray-800 text-sm space-y-5') do |form| %>
+<%= form_with(model: user, local: true, html: {enctype: "multipart/form-data", data: { turbo: false }}, class: 'text-gray-800 text-sm space-y-8') do |form| %>
 	<% if user.errors.any? %>
 		<div id="error_explanation">
 			<p><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</p>
@@ -15,7 +15,7 @@
 
 	<div class="flex flex-col items-center justify-center">
 		<% if @user.picture %>
-			<%= image_tag @user.picture, {class: "mb-1 bg-cover bg-gray-400 h-12 md:h-16 md:w-16 rounded-full w-12", alt: @user.name, onerror: "this.style.opacity='0'"} %>
+			<%= image_tag @user.picture, {class: "mb-3 bg-cover bg-gray-400 h-12 md:h-16 md:w-16 rounded-full w-12", alt: @user.name, onerror: "this.style.opacity='0'"} %>
 			<%= form.hidden_field :image, value: @user.cached_image_data %>
 			<%= form.file_field :image, class: "" %>
 		<% else %>
@@ -26,16 +26,16 @@
 	</div>
 
 	<div class="text-gray-600">
-		<label class="font-medium">Nome</label>
-		<%= form.text_field :name, class: 'border focus:border-brand-500 focus:outline-none focus:ring focus:ring-brand-500 px-2 py-2 rounded shadow-sm w-full' %>
+		<label class="font-bold">Nome</label>
+		<%= form.text_field :name, class: 'mt-1 border focus:border-brand-500 focus:outline-none focus:ring focus:ring-brand-500 p-3 rounded w-full' %>
 	</div>
 
 	<div class="text-gray-600">
-		<label class="font-medium">Nome de usuário (username)</label>
-		<%= form.text_field :slug, class: 'border focus:border-brand-500 focus:outline-none focus:ring focus:ring-brand-500 px-2 py-2 rounded shadow-sm w-full' %>
+		<label class="font-bold">Nome de usuário</label>
+		<%= form.text_field :slug, class: 'mt-1 border focus:border-brand-500 focus:outline-none focus:ring focus:ring-brand-500 p-3 rounded w-full' %>
 	</div>
 
-	<button class="float-right px-5 py-2 antialiased font-semibold text-white bg-brand-500 rounded-full">
+	<button class="float-right px-5 py-2 font-semibold text-white bg-brand-600 hover:bg-brand-500 rounded-full">
 		Salvar
 	</button>
 
