Fix in theme filter

--- a/web/app/components/movies_component.html.erb
+++ b/web/app/components/movies_component.html.erb
@@ -1,6 +1,6 @@
 <div id="<%= @id %>" data-turbo-permanent class="select-none mx-auto max-w-screen-lg" data-controller="persist-horizontal-scroll slider" data-model="movie" data-slider-distance-value="400" data-persist-horizontal-scroll-value="0">
 	<% if @title %>
-		<h2 class="c-h2">
+		<h2 class="px-5 md:px-0 c-h2">
 			<%= @title %>
 		</h2>
 	<% end %>
