--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -17,7 +17,7 @@
 		<% end %>
 		<% unless params[:day] || params[:category] %>
 			<% unless current_user %>
-				<div id="hero__presentation" data-turbo-permanent="" class="overflow-hidden overflow-x-hidden relative gap-3 items-center mx-5 mb-5 mb-16 h-56 rounded-lg border select-none md:mb-24 md:h-72 md:items-start tap-highlight-none" style="min-height: 200px">
+				<div id="hero__presentation" data-turbo-permanent="" class="overflow-hidden overflow-x-hidden relative gap-3 items-center mx-5 md:mx-0 mb-5 mb-16 h-56 rounded-lg border select-none md:mb-24 md:h-72 md:items-start tap-highlight-none" style="min-height: 200px">
 					<div class="relative z-20 px-3 pt-3 -mb-5 md:pt-5">
 						<h2 class="hidden md:inline-block c-h2 text-brand-600">
 							Eventos e cinema em Porto Alegre
