--- a/web/app/components/main_sidebar/filter_component.html.erb
+++ b/web/app/components/main_sidebar/filter_component.html.erb
@@ -4,7 +4,7 @@
 			<div data-reflex="click->Filter#open"
 					 data-filter-group="category"
 					 class="<%= helpers.class_names('bg-brand-200 text-brand-600 items-center cursor-pointer duration-50 flex font-semibold hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 inline-block justify-start mb-3 mr-3 px-4 py-2 rounded-full select-none tap-highlight-none transform transition-colors transition-all w-content') %>">
-				<%= @filters[:categories]&.map { |category| Category::CATEGORIES.select { |hash| hash['name'] == category }&.first['display_name'] }.join(', ') %>
+				<%= @categories_filtered&.map { |c| c.details['display_name'] }.join(', ') %>
 				<div data-reflex="click->Filter#clear_filter"
 						 data-filter-only="category">
 					<svg xmlns="http://www.w3.org/2000/svg" class="-mr-1.5 fill-current h-5 hover:text-red-400 ml-1.5 w-5" viewBox="0 0 20 20" fill="currentColor">
@@ -36,15 +36,15 @@
 			</div>
 		<% end %>
 		<% if @filters[:theme].present? && !categories_or_date_presents? %>
-			<div data-reflex="click->Filter#filter" data-filter-theme="entretenimento-lazer" data-turbo-preserve-scroll="true" class="<%= helpers.class_names('mr-3 mb-3', { 'c-chip--active': !@filters[:theme] || @filters[:theme] == 'entretenimento-lazer',
-																																																																																			 'c-chip':         @filters[:theme] && @filters[:theme] != 'entretenimento-lazer' }) %>">
+			<div data-reflex="click->Filter#filter" data-filter-theme="1" data-turbo-preserve-scroll="true" class="<%= helpers.class_names('mr-3 mb-3', { 'c-chip--active': !@filters[:theme] || @filters[:theme] == 1,
+																																																																										'c-chip':         @filters[:theme] && @filters[:theme] != 1 }) %>">
 				<svg xmlns="http://www.w3.org/2000/svg" class="mr-1.5 md:mr-2 w-4 md:w-5 md:h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z"/>
 				</svg>
 				Entretenimento
 			</div>
-			<div data-reflex="click->Filter#filter" data-filter-theme="trabalho-educacao" data-turbo-preserve-scroll="true" class="<%= helpers.class_names('mr-3 mb-3', { 'c-chip--active': @filters[:theme] == 'trabalho-educacao',
-																																																																																		'c-chip':         @filters[:theme] != 'trabalho-educacao' }) %>">
+			<div data-reflex="click->Filter#filter" data-filter-theme="2" data-turbo-preserve-scroll="true" class="<%= helpers.class_names('mr-3 mb-3', { 'c-chip--active': @filters[:theme] == 2,
+																																																																										'c-chip':         @filters[:theme] != 2 }) %>">
 				<svg xmlns="http://www.w3.org/2000/svg" class="mr-1.5 md:mr-2 w-4 md:w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
 				</svg>
@@ -78,23 +78,25 @@
 							<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
 						</svg>
 					</div>
-					<div class="flex flex-wrap mb-3">
+					<div class="-mx-5 border-b flex flex-wrap mb-3 pb-3 px-5 space-x-2">
 						<div data-reflex="click->Filter#show_filter_group"
 								 data-filter-group="category"
 								 data-open="<%= @show_filter_group == 'category' %>"
-								 class="<%= helpers.class_names('items-center border cursor-pointer duration-50 flex hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 inline-block justify-start mb-2 mr-2 pl-1.5 pr-4 py-2 rounded-full select-none tap-highlight-none transform transition-all transition-colors w-content',
-																								{ 'bg-brand-200 border-brand-200 text-brand-600': @filters[:categories].present? || @show_filter_group == 'category' }) %>">
+								 class="<%= helpers.class_names('',
+																								{ 'c-chip':         @filters[:categories].empty?,
+																									'c-chip--active': @filters[:categories].present? || @show_filter_group == 'category' }) %>">
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="<%= helpers.class_names('fill-current w-5 mr-1 transform transition-transform',
 																																																				 { 'rotate-180': @show_filter_group == 'category' }) %>">
 								<path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"/>
 							</svg>
-							<%= @filters[:categories].present? ? @filters[:categories].map { |category| Category::CATEGORIES.select { |hash| hash['name'] == category }&.first['display_name'] }.join(', ') : 'Categorias' %>
+							<%= @filters[:categories]&.present? ? @categories_filtered&.map { |c| c.details['display_name'] }.join(', ') : 'Categorias' %>
 						</div>
 						<div data-reflex="click->Filter#show_filter_group"
 								 data-filter-group="date"
 								 data-open="<%= @show_filter_group == 'date' %>"
-								 class="<%= helpers.class_names('items-center border cursor-pointer duration-50 flex hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 inline-block justify-start mb-2 mr-2 pl-1.5 pr-4 py-2 rounded-full select-none tap-highlight-none transform transition-all transition-colors w-content',
-																								{ 'bg-brand-200 border-brand-200 text-brand-600': @filters[:date] || @show_filter_group == 'date' }) %>">
+								 class="<%= helpers.class_names('',
+																								{ 'c-chip':         !@filters[:date],
+																									'c-chip--active': @filters[:date] || @show_filter_group == 'date' }) %>">
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="<%= helpers.class_names('fill-current w-5 mr-1 transform transition-transform',
 																																																				 { 'rotate-180': @show_filter_group == 'date' }) %>">
 								<path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"/>
@@ -104,7 +106,7 @@
 						<% if categories_or_date_presents? %>
 							<div data-reflex="click->Filter#clear_filter"
 									 data-filter-group="category"
-									 class="inline-block flex justify-start items-center py-2 pr-4 pl-4 mr-2 mb-2 font-semibold text-gray-700 bg-gray-100 rounded-full transition-all transition-colors transform cursor-pointer select-none duration-50 hover:bg-red-200 hover:text-red-700 tap-highlight-none w-content">
+									 class="c-chip">
 								Limpar
 							</div>
 						<% end %>
@@ -118,9 +120,9 @@
 												 data-filter-group="date"
 												 data-selected="<%= @filters[:date]&.to_date == day %>"
 												 data-filter-date="<%= day %>"
-												 class="<%= helpers.class_names('items-center cursor-pointer duration-50 flex text-sm hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 inline-block justify-start mb-3 mr-3 px-4 py-2 rounded-full select-none tap-highlight-none transform transition-colors transition-all w-content',
-																												{ 'bg-brand-200 text-brand-600': @filters[:date]&.to_date == day,
-																													'bg-gray-100 text-gray-600':   !@filters[:date] || @filters[:date]&.to_date != day }) %>">
+												 class="<%= helpers.class_names('text-sm mb-2 mr-2',
+																												{ 'c-chip--active': @filters[:date]&.to_date == day,
+																													'c-chip':         !@filters[:date] || @filters[:date]&.to_date != day }) %>">
 											<%= helpers.day_of_week(day) %>
 										</div>
 									<% end %>
@@ -138,16 +140,16 @@
 									<% @categories.each do |category| %>
 										<% if @params&.dig(:category) %>
 											<%= link_to category.details_display_name, category_events_path(category.details_url), class: helpers.class_names('border cursor-pointer duration-50 flex font-semibold hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 inline-block justify-start mb-2 mr-2 px-4 py-1 rounded-full select-none tap-highlight-none transform transition-colors transition-all w-content',
-																																																																				{ 'bg-brand-200 border-brand-200 text-brand-600': @filters[:categories]&.include?(category.details_name),
-																																																																					'text-gray-500':                                !@filters[:categories]&.include?(category.details_name) }) %>
+																																																																				{ 'bg-brand-200 border-brand-200 text-brand-600': @filters[:categories]&.include?(category.id.to_s),
+																																																																					'text-gray-500':                                !@filters[:categories]&.include?(category.id.to_s) }) %>
 										<% else %>
 											<div data-reflex="click->Filter#filter"
 													 data-filter-group="category"
-													 data-selected="<%= @filters[:categories]&.include?(category.details_name) %>"
-													 data-filter-category="<%= category.details_name %>"
-													 class="<%= helpers.class_names('items-center cursor-pointer duration-50 flex text-sm hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 inline-block justify-start mb-3 mr-3 px-4 py-2 rounded-full select-none tap-highlight-none transform transition-colors transition-all w-content',
-																													{ 'bg-brand-200 text-brand-600': @filters[:categories]&.include?(category.details_name),
-																														'bg-gray-100 text-gray-600':   !@filters[:categories]&.include?(category.details_name) }) %>">
+													 data-selected="<%= @filters[:categories]&.include?(category.id) %>"
+													 data-filter-category="<%= category.id %>"
+													 class="<%= helpers.class_names('mb-2 mr-2 text-sm',
+																													{ 'c-chip--active': @filters[:categories]&.include?(category.id.to_s),
+																														'c-chip':         !@filters[:categories]&.include?(category.id.to_s) }) %>">
 												<%= category.details_display_name %>
 											</div>
 										<% end %>
